kubernetes/mychart/templates/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: database
spec:
  serviceName: pg-service
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: sqlscript
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: sqlscript
        configMap:
          name: pg-init-script
# volumeClaimTemplates: # Add this if you wish to provide persistence. Adjust 'storage' to fit your needs.
# - metadata:
#     name: postgres-storage
#   spec:
#     accessModes: ["ReadWriteOnce"]
#     resources:
#       requests:
#         storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  labels:
    app: database
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
  - port: 5432
