kubernetes/mychart/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-service # back end service
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: react-service # front end service
spec:
  type: NodePort # minikube not support LoadBalancer
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
