kubernetes/mychart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: "duyentodoapp.fpt"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: react-service
            port:
              number: 3000
